# talkhanz.github.io

./: .gitignore  Info.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: about.md  index.md
docs/assets/plots/: scaling.html
docs/assets/stylesheets/: extra.css
docs/blog/: .authors.yml  index.md
docs/blog/posts/: interactive-plots-demo.md  welcome.md
notebooks/: example_plots.ipynb
