[project]
name = "ml-blog"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material>=9.5",
    "mkdocs-rss-plugin>=1.19.0",
]

[dependency-groups]
notebooks = [
    "jupyter>=1.1.1",
    "kaleido>=1.3.0",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
]
